--- a/libs/user/user-listing/src/lib/user-listing.component.html
+++ b/libs/user/user-listing/src/lib/user-listing.component.html
@@ -34,11 +34,11 @@
                   [matTooltip]='element.email'> {{(element.email | maxStringLimit) || '--'}} </td>
             </ng-container>
 
-            <ng-container matColumnDef='country'>
-              <th mat-header-cell *matHeaderCellDef> {{constantDataService.FIELD_NAME.COUNTRY | titlecase}}
-                /{{constantDataService.FIELD_NAME.LOCATION | titlecase}} </th>
-              <td mat-cell *matCellDef='let element'>--</td>
-            </ng-container>
+<!--            <ng-container matColumnDef='country'>-->
+<!--              <th mat-header-cell *matHeaderCellDef> {{constantDataService.FIELD_NAME.COUNTRY | titlecase}}-->
+<!--                /{{constantDataService.FIELD_NAME.LOCATION | titlecase}} </th>-->
+<!--              <td mat-cell *matCellDef='let element'>&#45;&#45;</td>-->
+<!--            </ng-container>-->
 
             <ng-container matColumnDef='date_of_joining'>
               <th mat-header-cell
