--- a/libs/shared/ui/questionnaire-selector/src/lib/questionnaire-selector.component.html
+++ b/libs/shared/ui/questionnaire-selector/src/lib/questionnaire-selector.component.html
@@ -53,7 +53,7 @@
                   </ng-container>
 
                   <ng-container matColumnDef='id'>
-                    <th mat-header-cell *matHeaderCellDef>{{constantDataService.FIELD_NAME.ID | titlecase}}</th>
+                    <th mat-header-cell [width]='70' *matHeaderCellDef>{{constantDataService.FIELD_NAME.ID | titlecase}}</th>
                     <td mat-cell *matCellDef='let element'> {{element.id || '--'}} </td>
                   </ng-container>
 
