--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -86,7 +86,7 @@
       </div>
     </div>
     <div class='row'>
-      <div class='col-lg-6 col-md-12  mt-4'>
+      <div class='col-lg-12 col-md-12  mt-4'>
         <mat-card class='p-0'>
           <div class='container-fluid p-0'>
             <div class='row m-0'>
@@ -100,7 +100,7 @@
                 </div>
               </div>
               <div class='col-12  tableOverFlow'>
-                <table mat-table [dataSource]='assessmentTestTable' style='width: 60vw'>
+                <table mat-table [dataSource]='assessmentTestTable' class='w-100' style='width: 60vw'>
                   <ng-container matColumnDef='position'>
                     <th mat-header-cell *matHeaderCellDef>{{'Position' | titlecase}}</th>
                     <td mat-cell *matCellDef='let element,let i = index'
@@ -147,7 +147,7 @@
           </div>
         </mat-card>
       </div>
-      <div class='col-lg-6 col-md-12  mt-4'>
+      <div class='col-lg-12 col-md-12  mt-4'>
         <mat-card class='p-0'>
           <div class='container-fluid p-0'>
             <div class='row m-0'>
@@ -161,7 +161,7 @@
                 </div>
               </div>
               <div class='col-12 tableOverFlow'>
-                <table mat-table [dataSource]='packEngTable' style='width: 60vw'>
+                <table mat-table [dataSource]='packEngTable'class='w-100' style='width: 60vw'>
                   <ng-container matColumnDef='position'>
                     <th mat-header-cell *matHeaderCellDef>{{'Position' | titlecase}}</th>
                     <td mat-cell *matCellDef='let element, let i = index'
