--- a/libs/test/test-create/src/lib/test-create.component.html
+++ b/libs/test/test-create/src/lib/test-create.component.html
@@ -293,6 +293,9 @@
                                                 formControlName='fiveRep'>5 rep
                                   </mat-checkbox>
                                 </div>
+                                <div class='col-12' *ngIf='repsCoreGroup?.errors$ | async'>
+                                  <mat-error><small>Minimum 1 selection is required</small></mat-error>
+                                </div>
                               </div>
                               <div class='row mb-3'>
                                 <div class='col-12'>
