--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -117,12 +117,39 @@
                     > {{(element.id) || '--'}} </td>
                   </ng-container>
                   <ng-container matColumnDef='score'>
-                    <th mat-header-cell *matHeaderCellDef>{{'Average Score (CPS)' | titlecase}}</th>
+                    <th mat-header-cell *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                        <span>{{'Average Score (CPS)' | titlecase}}</span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3'
+                                  [disabled]='(store.isActing$ | async)'
+                                  color='{{filtersAssessmentEng.controls.averagescoreSort.value === sortingEnum.DESC ? "primary" : ""}}'
+                                  (click)='updateAssessmentSorting("averagescoreSort")'>
+                            <mat-icon
+                              style='font-size: 20px;'>{{filtersAssessmentEng.controls.averagescoreSort?.value === sortingEnum.ASC ? "arrow_upward" : "arrow_downward" }}</mat-icon>
+                          </button>
+                        </div>
+                      </div>
+                    </th>
+<!--                    <th mat-header-cell *matHeaderCellDef>{{'Average Score (CPS)' | titlecase}}</th>-->
                     <td mat-cell *matCellDef='let element'
                     > {{(element.score) || '--'}} </td>
                   </ng-container>
                   <ng-container matColumnDef='completion'>
-                    <th mat-header-cell *matHeaderCellDef>{{'Assessment Completion' | titlecase}}</th>
+                    <th mat-header-cell *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                        <span>{{'Assessment Completion' | titlecase}}</span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3'
+                                  [disabled]='(store.isActing$ | async)'
+                                  color='{{filtersAssessmentEng.controls.completionSort.value === sortingEnum.DESC ? "primary" : ""}}'
+                                  (click)='updateAssessmentSorting("completionSort")'>
+                            <mat-icon
+                              style='font-size: 20px;'>{{filtersAssessmentEng.controls.completionSort?.value === sortingEnum.ASC ? "arrow_upward" : "arrow_downward" }}</mat-icon>
+                          </button>
+                        </div>
+                      </div>
+                    </th>
                     <td mat-cell *matCellDef='let element'
                     > {{(element.completion) || '--'}} </td>
                   </ng-container>
@@ -202,7 +229,20 @@
                     > {{(element.contentClicks) || '--'}} </td>
                   </ng-container>
                   <ng-container matColumnDef='resourcesClicks'>
-                    <th mat-header-cell *matHeaderCellDef>{{'Total Resources clicks' | titlecase}}</th>
+                    <th mat-header-cell *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                        <span>{{'Total Resources clicks' | titlecase}}</span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3'
+                                  [disabled]='(store.isActing$ | async)'
+                                  color='{{filtersPackEng.controls.resourceclicksSort.value === sortingEnum.DESC ? "primary" : ""}}'
+                                  (click)='updatePackSorting("resourceclicksSort")'>
+                            <mat-icon
+                              style='font-size: 20px;'>{{filtersPackEng.controls.resourceclicksSort?.value === sortingEnum.ASC ? "arrow_upward" : "arrow_downward" }}</mat-icon>
+                          </button>
+                        </div>
+                      </div>
+                    </th>
                     <td mat-cell *matCellDef='let element'
                     > {{(element.resourcesClicks) || '--'}} </td>
                   </ng-container>
@@ -259,12 +299,39 @@
                     > {{(element.id) || '--'}} </td>
                   </ng-container>
                   <ng-container matColumnDef='videoPlays'>
-                    <th mat-header-cell *matHeaderCellDef>{{'Video Plays' | titlecase}}</th>
+                    <th mat-header-cell *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                        <span>{{'Video Plays' | titlecase}}</span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3'
+                                  [disabled]='(store.isActing$ | async)'
+                                  color='{{filtersTestWatched.controls.videoplaySort.value === sortingEnum.DESC ? "primary" : ""}}'
+                                  (click)='updateTopWatched("videoplaySort")'>
+                            <mat-icon
+                              style='font-size: 20px;'>{{filtersTestWatched.controls.videoplaySort?.value === sortingEnum.ASC ? "arrow_upward" : "arrow_downward" }}</mat-icon>
+                          </button>
+                        </div>
+                      </div>
+                    </th>
+<!--                    <th mat-header-cell *matHeaderCellDef>{{'Video Plays' | titlecase}}</th>-->
                     <td mat-cell *matCellDef='let element'
                     > {{(element.videoPlays) || '--'}} </td>
                   </ng-container>
                   <ng-container matColumnDef='resultLog'>
-                    <th mat-header-cell *matHeaderCellDef>{{'Result Log' | titlecase}}</th>
+                    <th mat-header-cell *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                        <span>{{'Result Log' | titlecase}}</span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3'
+                                  [disabled]='(store.isActing$ | async)'
+                                  color='{{filtersTestWatched.controls.resultlogSort.value === sortingEnum.DESC ? "primary" : ""}}'
+                                  (click)='updateTopWatched("resultlogSort")'>
+                            <mat-icon
+                              style='font-size: 20px;'>{{filtersTestWatched.controls.resultlogSort?.value === sortingEnum.ASC ? "arrow_upward" : "arrow_downward" }}</mat-icon>
+                          </button>
+                        </div>
+                      </div>
+                    </th>
                     <td mat-cell *matCellDef='let element'
                     > {{(element.resultLog) || '--'}} </td>
                   </ng-container>
