fix(date): range size

--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -18,10 +18,10 @@
                                                       icon='file_download'></hidden-innovation-dashboard-count-card>
             </div>
             <div class='col-md-12 col-lg-4 mt-lg-0 mt-3'>
-              <mat-card class='bg-light h-100' style='padding: 10px'>
+              <mat-card class='bg-light h-100' style='padding: 10px 10px 0 10px'>
                 <div class='container-fluid p-0'>
                   <div class='row'>
-                    <div class='col-12'>
+                    <div class='col-12 '>
                       <hidden-innovation-common-form-field-date
 
                         [maxDate]='maxDate'
